WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262991
Error message for `new Array(1.5)` is confusing
https://bugs.webkit.org/show_bug.cgi?id=262991
Summary
Error message for `new Array(1.5)` is confusing
Ross Kirsling
Reported
2023-10-10 18:23:54 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2023-10-10 18:27:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18925
EWS
Comment 2
2023-10-11 02:17:41 PDT
Committed
269193@main
(5fd85f759150): <
https://commits.webkit.org/269193@main
> Reviewed commits have been landed. Closing PR #18925 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-10-11 02:18:15 PDT
<
rdar://problem/116800091
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug