Error message for `new Array(1.5)` is confusing https://bugs.webkit.org/show_bug.cgi?id=262991

Reviewed by Keith Miller.

Currently, `new Array(1.5)` gives the error "Array size is not a small enough positive integer",
which is quite confusing since being "small enough" isn't the problem with 1.5 as an input.
Let's update this to "Array length must be a positive integer of safe magnitude".

* JSTests/ChakraCore/test/es5/exceptions3.baseline-jsc:
* JSTests/stress/tail-call-host-call-throw.js:
* LayoutTests/js/array-from-expected.txt:
* LayoutTests/js/dom/dfg-negative-array-size-expected.txt:
* Source/JavaScriptCore/dfg/DFGOperations.cpp:
* Source/JavaScriptCore/runtime/ArrayConstructor.cpp:
* Source/JavaScriptCore/runtime/ArrayConstructor.h:
* Source/JavaScriptCore/runtime/CommonSlowPaths.cpp:

Canonical link: https://commits.webkit.org/269193@main